--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -74,6 +74,10 @@
     display: block;
     margin-top: 7rpx;
 }
+.container{
+    height: 85%;
+    width: 100%;
+}
 .rightContainer {
     position: absolute;
     right: 3%;
@@ -85,7 +89,6 @@
     margin-left: 100rpx;
     width: 100rpx;
     height: 100rpx;
-    background-color: bisque;
 }
 .Img {
     width: 100%;
@@ -95,9 +98,71 @@
     margin-left: 100rpx;
     width: 100rpx;
     height: 100rpx;
-    background-color: aqua;
 }
 .pathImg {
     width: 100%;
     height: 100%;
+}
+.img-map{
+    width: 200rpx;
+    height: 200rpx;
+}
+.detailInfo {
+    width: 90%;
+    position: absolute;
+    bottom: 5%;
+    left: 2%;
+    background-color: #fff;
+    box-shadow: 2px 2px 10px #909090;
+    z-index: 9999;
+    height: 20%;
+    padding: 20rpx;
+}
+.content {
+    height: 80%;
+    width: 100%;
+    border-bottom: 1px solid #000;
+}
+.title {
+    width: 100%;
+    height: 40%;
+    margin-bottom: 20rpx;
+}
+.titleInfo {
+    font-size: 28rpx;
+}
+.subTitle {
+    font-size: 24rpx;
+}
+.descript {
+    text-overflow: -o-ellipsis-lastline;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    font-size: 24rpx;
+}
+.share {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 15%;
+    margin-top: 2%;
+}
+.shareItems {
+    height: 100%;
+    width: 16%;
+}
+.shareImg {
+    float: left;
+    display: inline-block;
+    width: 32rpx;
+    height: 32rpx;
+}
+.shareText {
+    display: inline-block;
+    font-size: 24rpx;
+    display: block;
 }
