--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -37,7 +37,9 @@
             scale="16"
         >
             <!--覆盖在地图上面的图片-->
-            
+            <cover-view class="coverView" scroll-top="0">
+                
+            </cover-view>
         </map>
     </view>
 
@@ -61,8 +63,8 @@
         </view>
     </view>
 
-    <view class="detailInfo">
-        <view class="content">
+    <view class="detailInfo" wx:if="{{detailShow}}">
+        <view class="content" bindtap="detailPage">
             <view class="title">
                 <view class="titleInfo">软件学院报到点</view>
                 <view class="subTitle">距你100米</view>
