--- a/pages/outDetail/outDetail.wxss
+++ b/pages/outDetail/outDetail.wxss
@@ -1,1 +1,154 @@
 /* pages/outDetail.wxss */
+.header {
+    height: 70rpx;
+    width: 100%;
+    background-color: #9b0d14;
+}
+.backIcon {
+    width: 32rpx;
+    height: 32rpx;
+    float: left;
+    margin-left: 10rpx;
+    margin-top: 15rpx;
+}
+.backImg {
+    width: 32rpx;
+    height: 32rpx;
+}
+.header-title {
+    color: #fff;
+    line-height: 70rpx;
+    font-size: 18px;
+    text-align: center;
+}
+.content {
+    /* height: 900rpx; */
+    padding: 20rpx;
+    box-sizing: border-box;
+    width: 100%;
+}
+.content-imgs {
+    height: 530rpx;
+    width: 100%;
+    margin-bottom: 20rpx;
+}
+.content-img {
+    height: 300rpx;
+    width: 100%;
+    top: 70rpx;
+}
+.content-des {
+    height: 35%;
+    margin-top: 20rpx;
+    box-shadow: 2px 2px 6px #909090 ;
+    padding: 0.5rem;
+}
+.content-saying {
+    height: 400rpx;
+    margin-top: 30rpx;
+    box-shadow: 2px 2px 6px #909090 ;
+    padding: 0.5rem;
+}
+.content-bottom {
+    height: 10%;
+}
+.swiperBox {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    height: 300rpx;
+}
+.swiper {
+    width: 100%;
+    height: 300rpx;
+}
+.swiper-item-one {
+    width: 100%;
+    height: 300rpx;
+}
+.des-title {
+    height: 30%;
+    font-size: 1rem;
+}
+.des-content {
+    height: 65%;
+    font-size: 0.8rem;
+    overflow-y: scroll;
+    /* overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical; */
+}
+.saying-title {
+    font-size: 0.8rem;
+    height: 10%;
+}
+.title-right {
+    position: absolute;
+    right: 2rem;
+    color: blue;
+}
+.msgListSty {
+    height: 87%;
+    margin-top: 10rpx;
+}
+.msg-img {
+    height: 30%;
+}
+.msg-img-left {
+    height: 50rpx;
+    width: 50rpx;
+    float: left;
+}
+.left-img {
+    width: 100%;
+    height: 100%;
+}
+.msg-img-right {
+    height: 60rpx;
+    line-height: 60rpx;
+    margin-left: 60rpx;
+    font-size: 0.8rem;
+}
+.msg-des {
+    height: 45%;
+    font-size: 0.8rem;
+    text-align: left;
+    margin-top: 10rpx;
+}
+.msg-timer {
+    height: 20%;
+    font-size: 0.8rem;
+}
+.com-sItem{
+    height: 47%;
+    margin-bottom: 10rpx;
+}
+.com-sItem:first-child{
+    border-bottom: 1px solid black;
+}
+.content-bottom {
+    border-top: 1px solid black;
+    position: fixed;
+    bottom: 0rpx;
+    height: 70rpx;
+    width: 95%;
+    display: flex;
+    justify-content: space-between;
+}
+.opt-img {
+    width: 30rpx;
+    height: 30rpx;
+    line-height: 40rpx;
+    float: left;
+}
+.opt-left-img {
+    height: 100%;
+    width: 100%;
+    margin-top: 20rpx;
+}
+.opt-right-text {
+    font-size: 0.8rem;
+    line-height: 70rpx;
+}
