--- a/common/Select/Select.wxml
+++ b/common/Select/Select.wxml
@@ -1,10 +1,11 @@
-<!--common/Select/Select.wxml-->
 <view class='com-selectBox'>
     <view class='com-sContent' bindtap='selectToggle'>
         <view class='com-sTxt'>{{nowText}}</view>
-        <image src='cloud://cloud1-3g64wm0l14fa1f42.636c-cloud1-3g64wm0l14fa1f42-1306847170/img/down.png'  class='com-sImg'  animation="{{animationData}}"></image>
+        <image src='cloud://cloud1-3g64wm0l14fa1f42.636c-cloud1-3g64wm0l14fa1f42-1306847170/img/bdown.png'  class='com-sImg'  animation="{{animationData}}"></image>
     </view>
     <view class='com-sList' wx:if="{{selectShow}}">
-        <view wx:for="{{propArray}}" data-index="{{index}}" wx:key='index' class='com-sItem' bindtap='setText'>{{item.text}}</view>
+        <view wx:for="{{propArray}}" wx:key='index' class='com-sItem' >
+            <view class="{{index == idx ? 'selectedItem' : ''}}" data-index="{{index}}" bindtap='setText'>{{item.text}}</view>
+        </view>
     </view>
 </view>
