--- a/pages/allMsgPage/allMsgPage.wxml
+++ b/pages/allMsgPage/allMsgPage.wxml
@@ -6,9 +6,9 @@
         </view>
         <view class="header-title">{{poiName}}</view>
     </view>
-    <view class="content-saying">
+    <view class="content-saying" bindtap="hideInput">
         <view class="msgListSty">
-            <view wx:for="{{msgList}}" wx:key='id' class='com-sItem'  bindtap='setText'>
+            <view wx:for="{{msgList}}" wx:key='id' class='com-sItem'>
                 <view class="msg-img">
                     <view class="msg-img-left">
                         <image class="left-img" src="{{item.msgImg}}">
@@ -21,23 +21,23 @@
                 <view class="msg-des">{{item.msgDes}}</view>
                 <view class='msg-bottom'>
                     <view class="msg-timer">{{item.msgTimer}}</view>
-                    <view class='msg-answer'>回复</view>
+                    <view class='msg-answer' data-set='{{item.msgName}}' catchtap="getAnswer">回复</view>
                 </view>
 
                 <!-- 若当前评论有回复，就展示 -->
                 <view wx:if="{{item.children}}" >
-                    <view wx:if="{{!isClick}}" class='moreMsg'>
+                    <view wx:if="{{!item.isClick}}" class='moreMsg'>
                         <view class='line'>
                             <image src="{{line}}"></image>
                         </view>
                         <view class='line-text'>
                             <text class='text'>展开{{item.children.length}}条评论</text>
-                            <image src="{{colleaps}}" class="notRotate" bindtap="hasColleaps"></image>
+                            <image src="{{colleaps}}" data-set='{{item.id}}' class="notRotate" bindtap="hasColleaps"></image>
                         </view>
                     </view>
                 </view>
                 <!-- 点击按钮出现评论 -->
-                <view wx:if="{{isClick && item.children}}" class='subChildren'>
+                <view wx:if="{{item.isClick && item.children}}" class='subChildren'>
                     <view  wx:for="{{item.children}}" wx:key='index' class='com-sItem'>
                         <view class="msg-img">
                             <view class="msg-img-left">
@@ -50,7 +50,6 @@
                         <view class="msg-des">{{item.msgDes}}</view>
                         <view class='msg-bottom'>
                             <view class="msg-timer">{{item.msgTimer}}</view>
-                            <view class='msg-answer'>回复</view>
                         </view>
                     </view>
 
@@ -60,7 +59,7 @@
                         </view>
                         <view class='line-text'>
                             <text class='text'>收起</text>
-                            <image src="{{colleaps}}" class="rotate" bindtap="hasColleaps"></image>
+                            <image src="{{colleaps}}" class="rotate" data-set='{{item.id}}' bindtap="hasColleaps"></image>
                         </view>
                     </view>
                 </view>
@@ -69,7 +68,7 @@
     </view>
 
     <view class="input-panel" style="bottom:{{keyboardHeight}}px">
-        <input adjust-position="{{false}}" hold-keyboard="{{true}}" bindinput="getInput" value="{{curMessage}}"/>
+        <input placeholder="{{placeholder}}" adjust-position="{{false}}" focus="{{focus}}" hold-keyboard="{{true}}" bindinput="getInput" value="{{curMessage}}"/>
         <view class="send-btn" bindtap="send">发送</view>
     </view>
 </view>
