--- a/pages/allMsgPage/allMsgPage.wxss
+++ b/pages/allMsgPage/allMsgPage.wxss
@@ -68,15 +68,17 @@
     color: gray;
 }
 .com-sItem{
-    height: 47%;
+    /* height: 47%; */
     margin-bottom: 30rpx;
 }
 .com-sItem:last-child{
     margin-bottom: 10rpx;
 }
 .msgListSty {
-    max-height: 87%;
+    /* max-height: 87%; */
+    height: 800rpx;
     margin-top: 10rpx;
+    overflow-y: scroll;
 }
 .content-saying {
     width: 90%;
@@ -179,3 +181,6 @@
     height: 20px;
     margin-top: 10rpx;
 }
+/* .msgContainer {
+    margin-top: 200rpx;
+} */
