--- a/pages/outDetail/outDetail.wxml
+++ b/pages/outDetail/outDetail.wxml
@@ -49,18 +49,18 @@
                     <view class="msg-des">{{item.msgDes}}</view>
                     <view class='msg-bottom'>
                         <view class="msg-timer">{{item.msgTimer}}</view>
-                        <view class='msg-answer' data-set='{{item.msgName}}' catchtap="getAnswer">回复</view>
+                        <view class='msg-answer' data-set='{{item}}' catchtap="getAnswer">回复</view>
                     </view>
 
                     <!-- 若当前评论有回复，就展示 -->
-                    <view wx:if="{{item.children}}" >
+                    <view wx:if="{{item.children}}" data-set='{{item.id}}' bindtap="hasColleaps">
                         <view wx:if="{{!item.isClick}}" class='moreMsg'>
                             <view class='line'>
                                 <image src="{{line}}"></image>
                             </view>
                             <view class='line-text'>
                                 <text class='text'>展开{{item.children.length}}条评论</text>
-                                <image src="{{colleaps}}" data-set='{{item.id}}' class="notRotate" bindtap="hasColleaps"></image>
+                                <image src="{{colleaps}}" class="notRotate"></image>
                             </view>
                         </view>
                     </view>
@@ -81,13 +81,13 @@
                             </view>
                         </view>
 
-                        <view class='notColleaps'>
+                        <view class='notColleaps' data-set='{{item.id}}' bindtap="hasColleaps">
                             <view class='line'>
                                 <image src="{{line}}"></image>
                             </view>
                             <view class='line-text'>
                                 <text class='text'>收起</text>
-                                <image src="{{colleaps}}" class="rotate" data-set='{{item.id}}' bindtap="hasColleaps"></image>
+                                <image src="{{colleaps}}" class="rotate"></image>
                             </view>
                         </view>
                     </view>
