--- a/pages/schoolPoint/schoolPoint.wxml
+++ b/pages/schoolPoint/schoolPoint.wxml
@@ -27,7 +27,7 @@
     <view class='startBtn' bindtap="goToMain">
         <view class="scaleBtn" >
             <image src="{{point}}"></image>
-            <text class='textBtn'>前往地点</text>
+            <text class='textBtn'>前往报到地点</text>
         </view>
     </view>
 </view>
