--- a/pages/allMsgPage/allMsgPage.wxss
+++ b/pages/allMsgPage/allMsgPage.wxss
@@ -20,10 +20,10 @@
     font-size: 18px;
     text-align: center;
 }
-.msgListSty {
+/* .msgListSty {
     max-height: 87%;
     margin-top: 10rpx;
-}
+} */
 .msg-img {
     height: 30%;
 }
@@ -76,17 +76,20 @@
 }
 .msgListSty {
     /* max-height: 87%; */
-    height: 800rpx;
+    /* height: 800rpx; */
+    height: 95%;
     margin-top: 10rpx;
     overflow-y: scroll;
 }
 .content-saying {
     width: 90%;
     margin: auto;
-    min-height: 200rpx;
+    height: 78vh;
+
+    /* min-height: 200rpx; */
     margin-top: 30rpx;
     box-shadow: 2px 2px 6px 3px #909090;
-    padding: 0.5rem;
+    padding: 0.2rem 0.5rem;
 }
 
 .message-list{
