--- a/pages/outDetail/outDetail.wxss
+++ b/pages/outDetail/outDetail.wxss
@@ -128,11 +128,11 @@
     height: 30rpx;
     /* line-height: 60rpx; */
     margin-left: 60rpx;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 }
 .msg-des {
     height: 45%;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     text-align: left;
     margin-top: 10rpx;
     margin-left: 60rpx;
@@ -171,8 +171,8 @@
     justify-content: space-between;
 }
 .opt-img {
-    width: 30rpx;
-    height: 30rpx;
+    width: 32rpx;
+    height: 32rpx;
     line-height: 40rpx;
     float: left;
 }
@@ -182,11 +182,11 @@
     margin-top: 20rpx;
 }
 .opt-right-text {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     line-height: 70rpx;
 }
 .opt-right-text1 {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     line-height: 70rpx;
     width: 30px !important;
     padding: 0px;
@@ -288,4 +288,25 @@
 .notTalk {
     margin-top: 40px;
     text-align: center;
+}
+.play {
+    width:32px;
+    height: 32px;
+    display: inline;
+    float: left;
+}
+.play image {
+    height: 100%;
+    width: 100%;
+}
+.des-text {
+    /* display: contents; */
+    font-size: 0.9rem;
+}
+.des-text:first-line {
+    height: 32px;
+    line-height: 32px;
+}
+.title-left {
+    font-size: 1rem;
 }
