--- a/pages/voicePage/voicePage.wxml
+++ b/pages/voicePage/voicePage.wxml
@@ -1,11 +1,9 @@
-<!-- index.wxml -->
-<view class='audioPlayer'>
+<!-- <view class='audioPlayer'>
   <view class='player'>
     <image src='{{audio.coverImgUrl}}' class='audioBack' mode='aspectFill'></image>
     <view class='audioControls'>
       <view class='flex'>
         <view class='bottom' catchtap='playAudio'>
-          <!-- 按钮 -->
           <view wx:if="{{backgroundAudio.isPlaying}}">
             <image src='{{paly}}' />
           </view>
@@ -21,5 +19,13 @@
         </view>
       </view>
     </view>
+  </view>
+</view> -->
+
+
+<view class="yuyinWrap">
+  <view class=''>
+    <button class="yuyinBtn start" bindtap='wordYun'>开始</button>
+    <button class="yuyinBtn" bindtap='end'>结束</button>
   </view>
 </view>
