--- a/pages/voicePage/voicePage.wxss
+++ b/pages/voicePage/voicePage.wxss
@@ -1,4 +1,4 @@
-/* index.wxss */
+index.wxss
 .flex{
     display: flex;
   }
@@ -52,4 +52,30 @@
   .audioControls .time{
     width: 120rpx;
     height: 100%;
+  }
+
+
+  .yuyinWrap {
+    position: relative;
+    margin-top:300rpx;
+  }
+   
+  .yuyinCon {
+    border: 1px solid #ccc;
+    margin: 0 auto;
+    padding: 10rpx 10rpx 70rpx;
+  }
+  .yuyinBtn {
+    width: 30%;
+    height: 70rpx;
+    position: absolute;
+    right: 112rpx;
+    bottom: 12rpx;
+    border: 1px solid #eee;
+    background: #fff;
+    color: #606267;
+    line-height: 62rpx;
+  }
+  .start{
+    left: -112rpx;
   }
